[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pause/SkillUse.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu_Info_Panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Menu_Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="SkillUse" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1030.0
margin_bottom = 770.0

[node name="All" type="HBoxContainer" parent="Panel"]
margin_right = 1024.0
margin_bottom = 768.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Left" type="Panel" parent="Panel/All"]
margin_left = 15.0
margin_right = 735.0
margin_bottom = 768.0
rect_min_size = Vector2( 720, 0 )
custom_styles/panel = ExtResource( 2 )

[node name="Chars" type="VBoxContainer" parent="Panel/All/Left"]
margin_right = 720.0
margin_bottom = 771.0
rect_min_size = Vector2( 720, 0 )

[node name="Char0" type="Button" parent="Panel/All/Left/Chars"]
editor/display_folded = true
margin_right = 720.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 190 )
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
flat = true
clip_text = true

[node name="Name" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 229.117
margin_top = 25.0
margin_right = 312.117
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "BEEFY BOI"

[node name="MP" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 627.0
margin_top = 100.0
margin_right = 692.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "200/200"
align = 2

[node name="MP_Label" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 489.0
margin_top = 100.0
margin_right = 513.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "MP"

[node name="HP" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 624.0
margin_top = 80.0
margin_right = 689.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "500/500"
align = 2

[node name="HP_Label" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 489.0
margin_top = 80.0
margin_right = 510.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "HP"

[node name="EXP_Label" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 229.117
margin_top = 100.0
margin_right = 442.117
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "EXP"

[node name="EXP" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 380.0
margin_top = 100.0
margin_right = 442.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "100/500"
align = 2

[node name="Level" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 422.0
margin_top = 80.0
margin_right = 440.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "99"
align = 2

[node name="Level_Label" type="Label" parent="Panel/All/Left/Chars/Char0"]
margin_left = 229.0
margin_top = 80.0
margin_right = 258.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Lv"

[node name="Sprite" type="Sprite" parent="Panel/All/Left/Chars/Char0"]
position = Vector2( 114.303, 88.0598 )
scale = Vector2( 2.42149, 2.22103 )
texture = ExtResource( 4 )

[node name="Char1" type="Button" parent="Panel/All/Left/Chars"]
editor/display_folded = true
margin_top = 194.0
margin_right = 720.0
margin_bottom = 384.0
rect_min_size = Vector2( 0, 190 )
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
flat = true
clip_text = true

[node name="Name" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 229.117
margin_top = 25.0
margin_right = 312.117
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "BEEFY BOI"

[node name="MP" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 627.0
margin_top = 100.0
margin_right = 692.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "200/200"
align = 2

[node name="MP_Label" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 489.0
margin_top = 100.0
margin_right = 513.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "MP"

[node name="HP" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 624.0
margin_top = 80.0
margin_right = 689.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "500/500"
align = 2

[node name="HP_Label" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 489.0
margin_top = 80.0
margin_right = 510.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "HP"

[node name="EXP_Label" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 229.117
margin_top = 100.0
margin_right = 442.117
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "EXP"

[node name="EXP" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 380.0
margin_top = 100.0
margin_right = 442.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "100/500"
align = 2

[node name="Level" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 422.0
margin_top = 80.0
margin_right = 440.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "99"
align = 2

[node name="Level_Label" type="Label" parent="Panel/All/Left/Chars/Char1"]
margin_left = 229.0
margin_top = 80.0
margin_right = 258.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Lv"

[node name="Sprite" type="Sprite" parent="Panel/All/Left/Chars/Char1"]
position = Vector2( 114.303, 88.0598 )
scale = Vector2( 2.42149, 2.22103 )
texture = ExtResource( 4 )

[node name="Char2" type="Button" parent="Panel/All/Left/Chars"]
editor/display_folded = true
margin_top = 388.0
margin_right = 720.0
margin_bottom = 578.0
rect_min_size = Vector2( 0, 190 )
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
flat = true
clip_text = true

[node name="Name" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 229.117
margin_top = 25.0
margin_right = 312.117
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "BEEFY BOI"

[node name="MP" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 627.0
margin_top = 100.0
margin_right = 692.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "200/200"
align = 2

[node name="MP_Label" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 489.0
margin_top = 100.0
margin_right = 513.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "MP"

[node name="HP" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 624.0
margin_top = 80.0
margin_right = 689.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "500/500"
align = 2

[node name="HP_Label" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 489.0
margin_top = 80.0
margin_right = 510.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "HP"

[node name="EXP_Label" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 229.117
margin_top = 100.0
margin_right = 442.117
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "EXP"

[node name="EXP" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 380.0
margin_top = 100.0
margin_right = 442.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "100/500"
align = 2

[node name="Level" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 422.0
margin_top = 80.0
margin_right = 440.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "99"
align = 2

[node name="Level_Label" type="Label" parent="Panel/All/Left/Chars/Char2"]
margin_left = 229.0
margin_top = 80.0
margin_right = 258.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Lv"

[node name="Sprite" type="Sprite" parent="Panel/All/Left/Chars/Char2"]
position = Vector2( 114.303, 88.0598 )
scale = Vector2( 2.42149, 2.22103 )
texture = ExtResource( 4 )

[node name="Char3" type="Button" parent="Panel/All/Left/Chars"]
editor/display_folded = true
margin_top = 582.0
margin_right = 720.0
margin_bottom = 772.0
rect_min_size = Vector2( 0, 190 )
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
flat = true
clip_text = true

[node name="Name" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 229.117
margin_top = 25.0
margin_right = 312.117
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "BEEFY BOI"

[node name="MP" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 627.0
margin_top = 100.0
margin_right = 692.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "200/200"
align = 2

[node name="MP_Label" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 489.0
margin_top = 100.0
margin_right = 513.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "MP"

[node name="HP" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 624.0
margin_top = 80.0
margin_right = 689.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "500/500"
align = 2

[node name="HP_Label" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 489.0
margin_top = 80.0
margin_right = 510.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "HP"

[node name="EXP_Label" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 229.117
margin_top = 100.0
margin_right = 442.117
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "EXP"

[node name="EXP" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 380.0
margin_top = 100.0
margin_right = 442.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "100/500"
align = 2

[node name="Level" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 422.0
margin_top = 80.0
margin_right = 440.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "99"
align = 2

[node name="Level_Label" type="Label" parent="Panel/All/Left/Chars/Char3"]
margin_left = 229.0
margin_top = 80.0
margin_right = 258.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Lv"

[node name="Sprite" type="Sprite" parent="Panel/All/Left/Chars/Char3"]
position = Vector2( 114.303, 88.0598 )
scale = Vector2( 2.42149, 2.22103 )
texture = ExtResource( 4 )

[node name="Right" type="VBoxContainer" parent="Panel/All"]
margin_left = 739.0
margin_right = 1009.0
margin_bottom = 768.0

[node name="Options_Panel" type="Panel" parent="Panel/All/Right"]
margin_right = 270.0
margin_bottom = 390.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 270, 390 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Panel/All/Right/Options_Panel"]
margin_left = -1.0
margin_top = 1.0
margin_right = 270.0
margin_bottom = 77.0
custom_styles/panel = ExtResource( 2 )

[node name="Question" type="Label" parent="Panel/All/Right/Options_Panel/Panel"]
margin_left = 3.0
margin_top = 2.0
margin_right = 270.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
text = "Who is the Spells Target?"
align = 1
valign = 1

[node name="Panel2" type="Panel" parent="Panel/All/Right/Options_Panel"]
margin_left = -1.0
margin_top = 76.0
margin_right = 270.0
margin_bottom = 389.0
custom_styles/panel = ExtResource( 2 )

[node name="Item Description" type="Label" parent="Panel/All/Right/Options_Panel/Panel2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 270.0
margin_bottom = 313.0
align = 1

[node name="Gap" type="Panel" parent="Panel/All/Right"]
margin_top = 394.0
margin_right = 270.0
margin_bottom = 509.0
rect_min_size = Vector2( 0, 115 )

[node name="Info" type="VBoxContainer" parent="Panel/All/Right"]
margin_top = 513.0
margin_right = 270.0
margin_bottom = 761.0
rect_min_size = Vector2( 0, 220 )

[node name="Area" type="Panel" parent="Panel/All/Right/Info"]
margin_right = 270.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = ExtResource( 2 )

[node name="Money" type="Panel" parent="Panel/All/Right/Info"]
margin_top = 84.0
margin_right = 270.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = ExtResource( 2 )

[node name="Playtime" type="Panel" parent="Panel/All/Right/Info"]
margin_top = 168.0
margin_right = 270.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = ExtResource( 2 )
[connection signal="pressed" from="Panel/All/Left/Chars/Char0" to="." method="_on_Char0_pressed"]
[connection signal="pressed" from="Panel/All/Left/Chars/Char1" to="." method="_on_Char1_pressed"]
[connection signal="pressed" from="Panel/All/Left/Chars/Char2" to="." method="_on_Char2_pressed"]
[connection signal="pressed" from="Panel/All/Left/Chars/Char3" to="." method="_on_Char3_pressed"]
